--- a/sofi/css/estil.css
+++ b/sofi/css/estil.css
@@ -3,18 +3,19 @@
 
 html {
     box-sizing: border-box;
+    background-color: #0f172a;
+    color: #cbd5e1;
+    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
+    line-height: 1.8;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    line-height: 1.8;
-    color: #555;
     margin: 0;
     margin-bottom: 5em;
 }
 
 * {
-    border-color: white;
+    border-color: #0f172a;
     box-sizing: border-box;
 }
 
@@ -31,7 +32,6 @@ header {
 }
 
 abstract {
-    background: white;
     display: block;
     padding: 1em 1.2em 2em 1.2em;
 }
@@ -78,45 +78,54 @@ a {
 
 h1 {
     text-align: center;
-    color: black;
+    color: white;
     font-family: 'Roboto Condensed', sans-serif;
 }
 
 h2 {
-    color: #444;
+    color: #ebebeb;
     font-family: 'Roboto Condensed', sans-serif;
+    margin-top: 2em;;
 }
 
 h3 {
-    color: #444;
+    color: #dedede;
     font-family: 'Roboto Condensed', sans-serif;
+    margin-top: 2em;
 }
 
 h4 {
-    color: #666;
+    color: #dadada;
     font-family: 'Roboto Condensed', sans-serif;
+    margin-top: 2em;
 }
 
 img {
     max-width: 100%;
     display: block;
     margin: auto;
+    background-color: white;
 }
 
 .img {
     width: 100%;
     overflow: auto;
-    /* margin: 0.5em; */
+    margin: 1em 0;
 }
 
 img[noshadow] {
     box-shadow: none;
 }
 
+p .img {
+    display: inline;
+    border: none;
+    margin: 0;
+}
+
 p img {
     display: inline;
-    margin: 0 .2em;
-    border: 1px solid #f2f2f2;
+    background: none;
 }
 
 ul, ol {
@@ -128,14 +137,14 @@ resum {
 }
 
 scfile {
-    background: #fdfdfd;
+    background: #132858;
     display: block;
-    border: 1px solid #d8dee9;
+    border: 1px solid #132858;
     border-radius: 8px 8px 0px 0px;
     font-family: 'Consolas', monospace;
     font-size: .9em;
     padding: .2em 1em;
-    color: #555;
+    color: #98b7ff;
     word-wrap: break-word;
 }
 
@@ -148,6 +157,10 @@ scfile::before {
 scfile a {
     text-decoration: none;
     color: inherit;
+}
+
+.line-highlight {
+    background: linear-gradient(to right,rgba(218, 195, 181, 0.1) 70%,hsla(24,20%,50%,0));
 }
 
 a[href*='github']::before {
@@ -203,11 +216,13 @@ add, rem, hig, low {
 }
 
 add {
-    background-color: #0c5a0c88;
+    /* background-color: #0c5a0c88; */
+    background: linear-gradient(to right,#0c5a0c88 70%,hsla(24,20%,50%,0));
 }
 
 rem {
-    background-color: #5c0a0c88;
+    /* background-color: #5c0a0c88; */
+    background: linear-gradient(to right, #5c0a0c88 70%,hsla(24,20%,50%,0));
 }
 
 hig {
@@ -234,7 +249,7 @@ circle::after {
 
 
 host {
-    background: #46433f;
+    background: #302f2e;
     color: white;
     font-weight: bold;
     display: block;
@@ -254,14 +269,14 @@ host + shell, scfile + sc {
 
 
 shell {
-    background: #47213c;
+    background: #50013b;
     color: white;
     display: block;
     font-family: 'Ubuntu mono', Consolas, monospace;
     white-space: pre;
     font-size: 14px;
     overflow-x: auto;
-    border-radius: 4px;
+    border-radius: 8px;
     margin-bottom: 1.6em;
 }
 
@@ -287,8 +302,8 @@ shell exception {
 
 shell consumed {
     background: repeating-linear-gradient(45deg, 
-    #d6d6d6dd, 
-    #d6d6d6dd 2px, 
+    #afafafdd, 
+    #afafafdd 2px, 
     #9198e500 2px, 
     #9198e500 4px);
 }
@@ -304,16 +319,18 @@ shell consume {
 
 shell + clar {
     display: block;
-    background-color: rgb(226, 226, 226);
+    /* background-color: rgb(226, 226, 226); */
+    border: 4px dashed #50013b;
     padding: 1em;
-    border-radius: 4px;
+    border-radius: 0px;
+    margin-bottom: 0px;
 }
 
 sc {
     display: block;
     font-size: 14px;
-    border-radius: 4px;
-    background-color: #2d2d2d;
+    border-radius: 8px;
+    background-color: #070b15;
     margin-bottom: 1.6em;
 }
 
@@ -361,7 +378,7 @@ w {
 }
 
 wt {
-    background-color: #47213c;
+    background-color: #50013b;
     color: white;
     font-family: 'Consolas', monospace;
     padding: .1em .2em;
@@ -380,7 +397,7 @@ url {
     padding: .125em .8em;
     /* white-space: wrap; */
     word-wrap: break-word;
-    background-color: #ebebeb;
+    background-color: rgb(58, 56, 70);
     font-size: .8em;
 }
 
@@ -399,7 +416,7 @@ file, folder {
 
 
 file {
-    background: #d3e2f1;
+    background: #cfe7ff;
     word-wrap: break-word;
 }
 
@@ -408,24 +425,24 @@ folder {
     word-wrap: break-word;
 }
 
-file::before, folder::before {
+/* file::before, folder::before {
     font-family: 'FASolid';
     margin-right: .3em;
 }
 
 file::before {
-    color: white;
+    color: #c5c5c1;
     content: '\f15c';
 }
 
 folder::before {
     color: #c5c5c1;
     content: '\f07c';
-}
+} */
 
 string {
     font-family: 'Consolas', monospace;
-    font-size: 1rem;
+    font-size: 0.9rem;
     background: #dde5da;
     color: #2f9c0a;
     padding: .1em .3em;
@@ -439,6 +456,7 @@ name {
     padding: .1em .5em;
     border-radius: 4px;
     background:white;
+    color: #555;
     box-shadow: 0 0 2px #5cbbc1;
     word-wrap: break-word;
 }
@@ -470,6 +488,7 @@ shell replace, url replace, sc replace, w replace {
 
 mo {
     background-color: #f2f2f2;
+    color: #555;
     padding: .1em .5em;
     border: 1px solid #bbb;
     white-space: nowrap;
@@ -534,13 +553,18 @@ check::before {
 work, warn, info, optional, tldr, observe, quizz, challenge, project {
     display: block;
     padding: .4em 1.2em;
+    margin-bottom: 1em;
+    border-radius: 0 0 8px 8px;
 }
 
 .work, .warn, .info, .optional, .tldr, .observe, .quizz, .challenge, .project {
 
-    padding: .1em .6em;
+    padding: .1em 1em;
     color: white;
     margin-top: 2em;
+    border-radius: 8px 8px 0 0;
+    /* line-height: 1.4em; */
+    font-size: 0.9em;
 }
 
 @media(min-width: 480px){
@@ -560,10 +584,12 @@ work {
 .work::before {
     font-family: 'FASolid';
     content: '\f304';
+    font-size: 0.85em;
 }
 
 warn {
-    background: #ffeded;
+    border: 1px solid #f66;
+    /* background: #ffeded; */
 }
 
 .warn {
@@ -576,7 +602,7 @@ warn {
 }
 
 info {
-    background: #e7ecf3;
+    border: 1px solid #77CAE0;
 }
 
 .info {
@@ -589,7 +615,7 @@ info {
 }
 
 optional {
-    background-color: #fff3dc;
+    border: 1px solid #FFA700;
 }
 
 .optional {
@@ -601,7 +627,7 @@ optional {
 }
 
 observe {
-    background-color: #e3fafc;
+    border: 1px solid #2BD7E3;
 }
 
 .observe {
@@ -615,7 +641,7 @@ observe {
 }
 
 tldr {
-    background:  #d8dee9;
+    /* background:  #d8dee9; */
 }
 
 /* question {
@@ -633,7 +659,7 @@ question::before {
 
 
 challenge {
-    background-color: #e3f4e9;
+    border: 1px solid #1E8E3E;
 }
 
 .challenge {
@@ -659,7 +685,7 @@ project::before {
 
 quizz {
     border: 1px solid #f9bc60;
-    background-color: white;
+    /* background-color: white; */
 }
 
 .quizz {
@@ -763,7 +789,7 @@ question o::before {
 
 question o.right::before {
     content: '\f00c';
-    color: green;
+    color: rgb(161, 212, 161);
 }
 
 question o.wrong::before {
@@ -772,7 +798,7 @@ question o.wrong::before {
 }
 
 question o.was-correct {
-    background-color: #c6e7b1;
+    background-color: #1e8e3e;
 }
 
 question o.was-correct:hover {
@@ -838,11 +864,11 @@ question[match] div.left o:hover {
 
 
 question[match] o.right {
-    background: #c6e7b1;
+    background: #1e8e3e;
 }
 
 question[match] o.wrong {
-    background: rgb(222, 151, 151);
+    background: #f66;
 }
 
 question o.right:hover {
@@ -1022,7 +1048,7 @@ stepper explanation w {
 
 mem {
     font-family: 'Consolas', monospace;
-    background: #2d2d2d;
+    background: #070b15;
     /* padding: 1em; */
 }
 
@@ -1189,7 +1215,7 @@ sidenav a + a {
 }
 
 nav {
-    color: #111;
+    color: #fee;
     position: fixed;
     top: 0.3em;
     left: 0.3em;
@@ -1206,7 +1232,7 @@ nav.hide {
 hamb-open {
     font-size: 30px;
     cursor: pointer;
-    color: #333;
+    color: #fee;
     padding: 1rem;
 }
 
