--- a/sofi/css/estil.css
+++ b/sofi/css/estil.css
@@ -259,12 +259,23 @@ sc {
     margin-bottom: 1.6em;
 }
 
-p sc, p sc div, p sc div pre {
+p sc {
+    padding: .125em .6em;
     display: inline;
+    font-size: 0.9em;
+    margin: 0;
+    word-break: normal;
+}
+
+p sc div, p sc div pre {
+    display: inline;
+    font-size: 0.9em;
+    margin: 0;
+    padding: 0;
 }
 
 p sc div pre[class*="language-"] {
-    padding: .1em .2em;
+    padding: 0;
 }
 
 mem pre[class*="language-"] code {
@@ -282,7 +293,7 @@ w {
     background-color: #f9f9f9ed;
     color: #3f1888;
     font-family: var(--font-code);
-    padding: .1em .2em;
+    /* padding: .1em .2em; */
     border-radius: 4px;
     /* border: 1px solid #efefef; */
     word-wrap: break-word;
